fix: content overflowing on Auth Modal validation

--- a/src/components/AuthModal/AuthModal.module.css
+++ b/src/components/AuthModal/AuthModal.module.css
@@ -7,7 +7,7 @@
   transform: translate(-50%, -50%);
   overflow: hidden;
   width: 768px;
-  min-height: 570px;
+  min-height: 600px;
   z-index: 2;
 }
 
